--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -196,3 +196,18 @@
         }
     }
 }
+
+
+.comments{
+
+    // &__wrapper{ 
+    //     // 
+    // }
+    &__img{
+        min-height: 1.5625rem;
+        min-width: 1.5625rem;
+        width: 1.5625rem;
+        height: 1.5625rem;
+        border-radius: 50%;
+    }
+}
