--- a/styles/bio.css
+++ b/styles/bio.css
@@ -929,10 +929,105 @@ html, body {
   }
 }
 
+.comments__title {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 600;
+  font-family: "Avenir Next Demi";
+  padding: 20px;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .comments__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+  }
+}
+.comments__form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: -100px;
+}
+.comments__name-label, .comments__comment-label {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+  color: #AFAFAF;
+  margin-bottom: 5px;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .comments__name-label, .comments__comment-label {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__name-label, .comments__comment-label {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.comments__name-input, .comments__comment-input {
+  color: #000000;
+  background-color: #FAFAFA;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  width: 50%;
+  min-height: 3rem;
+  padding: 0.75rem;
+  margin-bottom: 20px;
+}
+.comments__comment-input {
+  height: 6.25rem;
+}
 .comments__img {
-  min-height: 1.5625rem;
-  min-width: 1.5625rem;
-  width: 1.5625rem;
-  height: 1.5625rem;
+  width: 2.25rem;
+  height: 2.25rem;
   border-radius: 50%;
+  margin-left: 20px;
+}
+.comments__btn {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+  font-family: "Avenir Next Demi";
+  height: 2.5rem;
+  width: 50%;
+  border-radius: 0.25rem;
+  background-color: #323232;
+  color: #FFFFFF;
+  border: none;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .comments__btn {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__btn {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .comments__img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+  }
 }/*# sourceMappingURL=bio.css.map */
