--- a/styles/bio.css
+++ b/styles/bio.css
@@ -929,12 +929,16 @@ html, body {
   }
 }
 
+.comments {
+  display: flex;
+  flex-direction: column;
+}
 .comments__title {
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 600;
   font-family: "Avenir Next Demi";
-  padding: 20px;
+  padding: 1.25rem 0 2.8125rem 1.25rem;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .comments__title {
@@ -949,40 +953,44 @@ html, body {
   }
 }
 .comments__form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-right: -100px;
-}
-.comments__name-label, .comments__comment-label {
+  align-items: center;
+  margin-top: -4.375rem;
   font-size: 0.8125rem;
   line-height: 1.125rem;
   font-weight: 400;
   font-family: "Avenir Next Regular";
-  color: #AFAFAF;
-  margin-bottom: 5px;
+  margin-left: 2.5rem;
+  margin-right: 10px;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  .comments__name-label, .comments__comment-label {
+  .comments__form {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
 }
 @media (min-width: 1280px) {
-  .comments__name-label, .comments__comment-label {
+  .comments__form {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
 }
+.comments__name-label, .comments__comment-label {
+  color: #AFAFAF;
+  margin-bottom: 5px;
+  align-self: flex-start;
+  margin-left: 50px;
+}
 .comments__name-input, .comments__comment-input {
+  align-items: flex-start;
   color: #000000;
   background-color: #FAFAFA;
   border: 1px solid #E1E1E1;
   border-radius: 4px;
-  width: 50%;
+  width: 85%;
   min-height: 3rem;
   padding: 0.75rem;
   margin-bottom: 20px;
+  margin-left: 50px;
 }
 .comments__comment-input {
   height: 6.25rem;
@@ -991,7 +999,8 @@ html, body {
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 50%;
-  margin-left: 20px;
+  margin-left: 30px;
+  margin-bottom: 10px;
 }
 .comments__btn {
   font-size: 0.875rem;
@@ -999,11 +1008,13 @@ html, body {
   font-weight: 600;
   font-family: "Avenir Next Demi";
   height: 2.5rem;
-  width: 50%;
+  width: 85%;
   border-radius: 0.25rem;
   background-color: #323232;
   color: #FFFFFF;
   border: none;
+  margin-bottom: 20px;
+  margin-left: 50px;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .comments__btn {
