--- a/styles/bio.css
+++ b/styles/bio.css
@@ -961,7 +961,7 @@ html, body {
   font-weight: 400;
   font-family: "Avenir Next Regular";
   margin-left: 2.5rem;
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .comments__form {
@@ -977,21 +977,21 @@ html, body {
 }
 .comments__name-label, .comments__comment-label {
   color: #AFAFAF;
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
   align-self: flex-start;
-  margin-left: 50px;
+  margin-left: 3.125rem;
 }
 .comments__name-input, .comments__comment-input {
   align-items: flex-start;
   color: #000000;
   background-color: #FAFAFA;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px;
+  border: 0.0625rem solid #E1E1E1;
+  border-radius: 0.25rem;
   width: 85%;
   min-height: 3rem;
   padding: 0.75rem;
-  margin-bottom: 20px;
-  margin-left: 50px;
+  margin-bottom: 1.25rem;
+  margin-left: 3.125rem;
 }
 .comments__comment-input {
   height: 6.25rem;
@@ -1000,8 +1000,8 @@ html, body {
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 50%;
-  margin-left: 30px;
-  margin-bottom: 10px;
+  margin-left: 1.875rem;
+  margin-bottom: 0.625rem;
 }
 .comments__btn {
   font-size: 0.875rem;
@@ -1014,8 +1014,8 @@ html, body {
   background-color: #323232;
   color: #FFFFFF;
   border: none;
-  margin-bottom: 20px;
-  margin-left: 50px;
+  margin-bottom: 1.25rem;
+  margin-left: 3.125rem;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .comments__btn {
@@ -1058,8 +1058,8 @@ html, body {
     line-height: 1.125rem;
     font-weight: 400;
     font-family: "Avenir Next Regular";
-    margin-left: 80px;
-    margin-right: 10px;
+    margin-left: 5rem;
+    margin-right: 0.625rem;
   }
 }
 @media (min-width: 768px) and (max-width: 1279px) and (min-width: 768px) and (max-width: 1279px) {
@@ -1077,16 +1077,12 @@ html, body {
 @media (min-width: 768px) and (max-width: 1279px) {
   .comments__name-label, .comments__comment-label {
     color: #AFAFAF;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
     align-self: flex-start;
     margin-left: 6.25rem;
   }
   .comments__name-input, .comments__comment-input {
     align-items: flex-start;
-    color: #000000;
-    background-color: #FAFAFA;
-    border: 1px solid #E1E1E1;
-    border-radius: 4px;
     width: 80%;
     min-height: 3rem;
     padding: 0.75rem;
@@ -1131,9 +1127,95 @@ html, body {
   }
 }
 @media (min-width: 1280px) {
+  .comments {
+    display: flex;
+  }
+  .comments__form {
+    align-items: center;
+    margin-top: -4.375rem;
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    margin-left: 5rem;
+    margin-right: 0.625rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 768px) and (max-width: 1279px) {
+  .comments__form {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 1280px) {
+  .comments__form {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    padding: 1rem 0 3rem 18rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 768px) and (max-width: 1279px) {
+  .comments__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 1280px) {
+  .comments__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  .comments__name-input, .comments__comment-input {
+    width: 30%;
+    align-self: flex-start;
+    min-height: 3rem;
+    padding: 0.75rem;
+    margin-bottom: 1.25rem;
+    margin-left: 18rem;
+  }
+  .comments__name-input {
+    margin-left: 20rem;
+  }
+  .comments__comment-input {
+    height: 6.25rem;
+  }
   .comments__img {
-    width: 3rem;
-    height: 3rem;
+    width: 3.75rem;
+    height: 3.75rem;
     border-radius: 50%;
+    margin-left: 6.5rem;
+    margin-bottom: -0.625rem;
+  }
+  .comments__btn {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    height: 2.5rem;
+    width: 12%;
+    margin-bottom: 1.25rem;
+    margin-left: 40rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 768px) and (max-width: 1279px) {
+  .comments__btn {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) and (min-width: 1280px) {
+  .comments__btn {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
   }
 }/*# sourceMappingURL=bio.css.map */
