--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1218,4 +1218,18 @@ html, body {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
+}
+
+.comment-list {
+  list-style-type: none;
+  padding: 0;
+}
+.comment-list__item {
+  display: flex;
+  flex-direction: column;
+}
+.comment-list__img {
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 50%;
 }/*# sourceMappingURL=bio.css.map */
